--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@whereby.com/react-native-sdk": "^0.8.16",
     "date-fns": "^4.1.0",
     "expo": "54.0.17",
-    "expo-audio": "~1.0.13",
+    "expo-audio": "~1.0.14",
     "expo-av": "~16.0.7",
     "expo-camera": "^17.0.8",
     "expo-constants": "~18.0.10",
@@ -62,6 +62,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.12.1",
     "react-native-web": "~0.21.0",
+    "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
     "zod": "^3.25.76"
   },
