--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "nativewind-env.d.ts"
-, "json-data/doctor"  ]
+    "nativewind-env.d.ts",
+    "json-data/doctor",
+    "types/**/*.d.ts"
+  ]
 }
