--- a/package.json
+++ b/package.json
@@ -19,33 +19,34 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.4.0",
-    "@react-navigation/drawer": "^7.7.2",
+    "@react-navigation/drawer": "^7.5.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@whereby.com/react-native-sdk": "^0.8.16",
     "date-fns": "^4.1.0",
-    "expo": "54.0.17",
+    "expo": "~54.0.25",
+    "expo-asset": "~12.0.10",
     "expo-audio": "~1.0.14",
     "expo-av": "~16.0.7",
     "expo-camera": "^17.0.8",
     "expo-constants": "~18.0.10",
-    "expo-dev-client": "~6.0.16",
-    "expo-doctor": "^1.17.10",
+    "expo-dev-client": "~6.0.18",
     "expo-document-picker": "^14.0.7",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "~15.0.7",
-    "expo-linking": "~8.0.8",
+    "expo-linking": "~8.0.9",
     "expo-location": "^19.0.7",
-    "expo-router": "~6.0.13",
-    "expo-splash-screen": "~31.0.10",
+    "expo-router": "~6.0.15",
+    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-video": "~3.0.11",
     "expo-web-browser": "~15.0.8",
+    "glob": "^13.0.0",
     "lucide-react-native": "^0.545.0",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
@@ -58,10 +59,10 @@
     "react-native-gifted-charts": "^1.4.64",
     "react-native-maps": "1.20.1",
     "react-native-razorpay": "^2.3.0",
-    "react-native-reanimated": "~4.1.1",
+    "react-native-reanimated": "^4.1.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.12.1",
+    "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "0.5.1",
@@ -71,11 +72,26 @@
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "js-yaml": "^4.1.0",
     "patch-package": "^8.0.1",
     "postinstall-postinstall": "^2.1.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.9.2"
+  },
+  "overrides": {
+    "react-native-calendars": {
+      "react-native-safe-area-context": "~5.6.0"
+    }
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "react-native-razorpay"
+        ]
+      }
+    }
   },
   "private": true
 }
