--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "cmc-telehealth",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/app-icon.png",
+    "icon": "./assets/images/android-app-icon.png",
     "scheme": "cmctelehealth",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -13,14 +13,17 @@
       "bundleIdentifier": "com.cmctelehealth.app",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
-      }
+      },
+      "icon": {
+        "dark": "./assets/images/ios-app-icon.png",
+        "light": "./assets/images/ios-app-icon.png"
+      },
     },
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#ffffff",
-        "foregroundImage": "./assets/images/cmc-foreground.png",
-        "backgroundImage": "./assets/images/cmc-foreground-background.png",
-        "monochromeImage": "./assets/images/cmc-foreground.png"
+        "foregroundImage": "./assets/images/android-app-icon.png",
+        "monochromeImage": "./assets/images/android-app-icon.png"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
@@ -48,12 +51,12 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/app-icon.png",
+          "image": "./assets/images/splash.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff",
           "dark": {
-            "backgroundColor": "#000000"
+            "backgroundColor": "#ffffff"
           }
         }
       ],
