--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-native-maps": "1.20.1",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^4.1.5",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
