--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gifted-charts": "^1.4.64",
+    "react-native-keyboard-controller": "^1.20.7",
     "react-native-maps": "1.20.1",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^4.1.5",
