--- a/app.json
+++ b/app.json
@@ -20,6 +20,7 @@
       },
     },
     "android": {
+      "useNextNotificationsApi": true,
       "adaptiveIcon": {
         "backgroundColor": "#ffffff",
         "foregroundImage": "./assets/images/android-app-icon.png",
@@ -28,6 +29,7 @@
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
       "package": "com.cmctelehealth.app",
+      "googleServicesFile": "./google-services.json",
       "permissions": [
         "android.permission.RECORD_AUDIO",
         "android.permission.MODIFY_AUDIO_SETTINGS",
@@ -47,6 +49,14 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/android-app-icon.png",
+          "color": "#013220",
+          "sounds": []
+        }
+      ],
       "expo-router",
       [
         "expo-splash-screen",
