--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-camera": "^17.0.8",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.18",
+    "expo-device": "~8.0.10",
     "expo-document-picker": "^14.0.7",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
@@ -42,6 +43,7 @@
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.9",
     "expo-location": "^19.0.7",
+    "expo-notifications": "~0.32.16",
     "expo-router": "~6.0.15",
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
@@ -60,6 +62,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gifted-charts": "^1.4.64",
+    "react-native-keyboard-controller": "^1.20.7",
     "react-native-maps": "1.20.1",
     "react-native-razorpay": "^2.3.0",
     "react-native-reanimated": "^4.1.5",
@@ -69,7 +72,7 @@
     "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "0.5.1",
+    "react-native-worklets": "^0.7.4",
     "zod": "^3.25.76"
   },
   "devDependencies": {
