--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@react-navigation/drawer": "^7.5.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "@tanstack/react-query": "^5.90.17",
+    "@tanstack/react-query": "^5.90.21",
     "@whereby.com/react-native-sdk": "^0.8.16",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
@@ -32,6 +32,7 @@
     "expo-audio": "~1.0.14",
     "expo-av": "~16.0.7",
     "expo-camera": "^17.0.8",
+    "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.10",
     "expo-dev-client": "~6.0.18",
     "expo-device": "~8.0.10",
@@ -49,6 +50,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
+    "expo-task-manager": "^14.0.9",
     "expo-video": "~3.0.11",
     "expo-web-browser": "~15.0.8",
     "glob": "^13.0.0",
