--- a/app.json
+++ b/app.json
@@ -53,7 +53,7 @@
       [
         "expo-notifications",
         {
-          "icon": "./assets/images/android-app-icon.png",
+          "icon": "./assets/images/app-icon.png",
           "color": "#013220",
           "sounds": []
         }
